--- a/anaconda-environments/psychopy-environment-macos.yml
+++ b/anaconda-environments/psychopy-environment-macos.yml
@@ -1,72 +1,77 @@
 name: psychopy
 channels:
-- conda-forge
 - cogsci
+- conda-forge
 - defaults
 dependencies:
 - pygame=1.9.2a0=py27_0
-- pyglet=1.2.4=py27_0
-- configobj=5.0.6=py27_0
+- ca-certificates=2017.4.17=0
+- certifi=2017.4.17=py27_0
 - cycler=0.10.0=py27_0
 - et_xmlfile=1.0.1=py27_0
-- freetype=2.5.5=2
 - functools32=3.2.3.2=py27_0
-- gevent=1.2.2=py27_0
 - greenlet=0.4.12=py27_0
-- hdf5=1.8.17=1
-- icu=54.1=0
-- jbig=2.1=0
 - jdcal=1.3=py27_0
 - jpeg=9b=0
 - libiconv=1.14=0
+- libxslt=1.1.29=0
+- lxml=3.8.0=py27_0
+- msgpack-python=0.4.8=py27_0
+- numexpr=2.6.2=np113py27_0
+- olefile=0.44=py27_0
+- openssl=1.0.2l=0
+- patsy=0.4.1=py27_0
+- pyglet=1.2.4=py27_0
+- pyqt=5.6.0=py27_2
+- python=2.7.13=0
+- python-dateutil=2.6.0=py27_0
+- pytz=2017.2=py27_0
+- pyyaml=3.12=py27_0
+- seaborn=0.7.1=py27_0
+- setuptools=27.2.0=py27_0
+- sip=4.18=py27_0
+- six=1.10.0=py27_0
+- sqlite=3.13.0=0
+- statsmodels=0.8.0=np113py27_0
+- subprocess32=3.2.7=py27_0
+- wheel=0.29.0=py27_0
+- xlrd=1.0.0=py27_0
+- yaml=0.1.6=0
+- zlib=1.2.8=3
+- configobj=5.0.6=py27_0
+- freetype=2.5.5=2
+- gevent=1.2.2=py27_0
+- hdf5=1.8.17=1
+- icu=54.1=0
+- jbig=2.1=0
 - libpng=1.6.27=0
 - libtiff=4.0.6=3
 - libxml2=2.9.4=0
-- libxslt=1.1.29=0
-- lxml=3.8.0=py27_0
 - matplotlib=2.0.2=np113py27_0
 - mkl=2017.0.1=0
-- msgpack-python=0.4.8=py27_0
-- numexpr=2.6.2=np113py27_0
 - numpy=1.13.0=py27_0
-- olefile=0.44=py27_0
 - openpyxl=2.4.7=py27_0
-- openssl=1.0.2l=0
 - pandas=0.20.2=np113py27_0
 - pillow=4.1.1=py27_0
 - pip=9.0.1=py27_1
 - psutil=5.2.2=py27_0
 - pyopengl=3.1.1a1=np113py27_0
 - pyparsing=2.1.4=py27_0
-- pyqt=5.6.0=py27_2
 - pytables=3.3.0=np113py27_0
-- python=2.7.13=0
-- python-dateutil=2.6.0=py27_0
 - python.app=1.2=py27_4
-- pytz=2017.2=py27_0
-- pyyaml=3.12=py27_0
 - qt=5.6.2=2
 - readline=6.2=2
 - requests=2.14.2=py27_0
 - scipy=0.19.0=np113py27_0
-- seaborn=0.7.1=py27_0
-- setuptools=27.2.0=py27_0
-- sip=4.18=py27_0
-- six=1.10.0=py27_0
-- sqlite=3.13.0=0
-- subprocess32=3.2.7=py27_0
 - tk=8.5.18=0
-- wheel=0.29.0=py27_0
 - wxpython=3.0=py27_0
-- xlrd=1.0.0=py27_0
 - xz=5.2.2=1
-- yaml=0.1.6=0
-- zlib=1.2.8=3
 - pip:
   - decorator==4.0.11
   - et-xmlfile==1.0.1
   - imageio==2.1.2
   - moviepy==0.2.3.2
+  - psychopy==1.85.2
   - psychopy-ext==0.6.0.4
   - pyosf==1.0.5
   - python-bidi==0.4.0
