Add env exported from kramer today

--- a/anaconda-environments/psychopy-environment-win.yml
+++ b/anaconda-environments/psychopy-environment-win.yml
@@ -1,75 +1,110 @@
-name: psychopy
+name: base
 channels:
-- cogsci
-- conda-forge
-- defaults
+  - conda-forge
+  - defaults
 dependencies:
-- pygame=1.9.2a0=py27_0
-- pyglet=1.2.4=py27_0
-- bzip2=1.0.6=vc9_3
-- cffi=1.10.0=py27_0
-- configobj=5.0.6=py27_0
-- cycler=0.10.0=py27_0
-- et_xmlfile=1.0.1=py27_0
-- freetype=2.5.5=vc9_2
-- functools32=3.2.3.2=py27_0
-- gevent=1.2.2=py27_0
-- greenlet=0.4.12=py27_0
-- hdf5=1.8.17=vc9_0
-- icu=57.1=vc9_0
-- jdcal=1.3=py27_0
-- jpeg=9b=vc9_0
-- libpng=1.6.27=vc9_0
-- libtiff=4.0.6=vc9_3
-- lxml=3.8.0=py27_0
-- matplotlib=2.0.2=np111py27_0
-- mkl=2017.0.1=0
-- msgpack-python=0.4.8=py27_0
-- numexpr=2.6.2=np111py27_0
-- numpy=1.11.3=py27_0
-- olefile=0.44=py27_0
-- openpyxl=2.4.7=py27_0
-- openssl=1.0.2l=vc9_0
-- pandas=0.20.1=np111py27_0
-- pillow=4.1.1=py27_0
-- pip=9.0.1=py27_1
-- psutil=5.2.2=py27_0
-- pycparser=2.17=py27_0
-- pyopengl=3.1.1a1=np111py27_0
-- pyparsing=2.1.4=py27_0
-- pyqt=5.6.0=py27_2
-- pytables=3.3.0=np111py27_0
-- python=2.7.13=1
-- python-dateutil=2.6.0=py27_0
-- pytz=2017.2=py27_0
-- pyyaml=3.12=py27_0
-- qt=5.6.2=vc9_4
-- requests=2.14.2=py27_0
-- scipy=0.19.0=np111py27_0
-- seaborn=0.7.1=py27_0
-- setuptools=27.2.0=py27_1
-- sip=4.18=py27_0
-- six=1.10.0=py27_0
-- subprocess32=3.2.7=py27_0
-- tk=8.5.18=vc9_0
-- vs2008_runtime=9.00.30729.5054=0
-- wheel=0.29.0=py27_0
-- wxpython=3.0=py27_0
-- xlrd=1.0.0=py27_0
-- zlib=1.2.8=vc9_3
-- pip:
-  - backports.shutil-get-terminal-size==1.0.0
-  - decorator==4.0.11
-  - et-xmlfile==1.0.1
-  - imageio==2.1.2
-  - moviepy==0.2.3.2
-  - prompt-toolkit==1.0.14
-  - psychopy==1.84.2
-  - psychopy-ext==0.6.0.4
-  - pyosf==1.0.5
-  - pysoundcard==0.5.2
-  - pysoundfile==0.9.0.post1
-  - python-bidi==0.4.0
-  - tables==3.3.0
-  - tqdm==4.11.2
-  - wcwidth==0.1.7
+  - bzip2=1.0.6=vc9_1
+  - icu=58.2=vc9_0
+  - jpeg=9b=vc9_2
+  - libiconv=1.15=vc9_0
+  - libpng=1.6.34=vc9_0
+  - libtiff=4.0.9=vc9_0
+  - libxml2=2.9.5=vc9_2
+  - libxslt=1.1.32=vc9_0
+  - lxml=4.1.1=py27_0
+  - lzo=2.10=vc9_0
+  - pyglet=1.2.4=py27_0
+  - qt=5.6.2=vc9_1
+  - sqlite=3.20.1=vc9_2
+  - tk=8.6.7=vc9_0
+  - yaml=0.1.7=vc9_0
+  - zlib=1.2.11=vc9_0
+  - asn1crypto=0.23.0=py27h1d0b1e9_0
+  - backports=1.0=py27hadcabcf_1
+  - backports.functools_lru_cache=1.5=py27_1
+  - backports_abc=0.5=py27h6d9a788_0
+  - ca-certificates=2017.08.26=h94faf87_0
+  - certifi=2018.1.18=py27_0
+  - cffi=1.11.2=py27h591b45b_0
+  - chardet=3.0.4=py27h400594b_1
+  - conda=4.4.10=py27_0
+  - conda-env=2.6.0=h36134e3_1
+  - configobj=5.0.6=py27_0
+  - console_shortcut=0.1.1=h6bb2dd7_3
+  - cryptography=2.1.4=py27ha8a5bac_0
+  - cycler=0.10.0=py27h0308610_0
+  - enum34=1.1.6=py27h62011c5_1
+  - et_xmlfile=1.0.1=py27h0891461_0
+  - freetype=2.5.5=vc9_2
+  - functools32=3.2.3.2=py27hf90a932_1
+  - future=0.16.0=py27_1
+  - futures=3.2.0=py27h47d355e_0
+  - gevent=1.2.2=py27h3379b7b_0
+  - greenlet=0.4.13=py27h0c8e037_0
+  - hdf5=1.8.15.1=vc9_4
+  - icc_rt=2017.0.4=h97af966_0
+  - idna=2.6=py27hc92a076_1
+  - intel-openmp=2018.0.0=hc0023dc_8
+  - ipaddress=1.0.18=py27hdb5ba36_0
+  - jdcal=1.3=py27h098bf10_0
+  - matplotlib=1.4.3=np110py27_1
+  - menuinst=1.4.10=py27hffda999_0
+  - mkl=11.3.1=0
+  - msgpack-python=0.5.1=py27hdc96acc_0
+  - numexpr=2.4.6=np110py27_1
+  - numpy=1.10.4=py27_0
+  - olefile=0.45.1=py27_0
+  - openpyxl=2.5.0=py27_0
+  - openssl=1.0.2n=hc64555f_0
+  - pandas=0.20.3=py27h8fd4477_2
+  - patsy=0.5.0=py27_0
+  - pillow=4.0.0=py27_1
+  - pip=9.0.1=py27hfe60e39_4
+  - psutil=5.4.3=py27h0c8e037_0
+  - pycosat=0.6.3=py27hd462980_0
+  - pycparser=2.18=py27h9852578_1
+  - pyopengl=3.1.1a1=np110py27_0
+  - pyopenssl=17.5.0=py27h68a058b_0
+  - pyparsing=2.0.3=py27_0
+  - pyqt=4.10.4=py27_1
+  - pysocks=1.6.7=py27h3e65130_1
+  - pytables=3.2.2=np110py27_1
+  - python=2.7.14=hca1081f_23
+  - python-dateutil=2.6.1=py27h3c75914_1
+  - pytz=2018.3=py27_0
+  - pywin32=221=py27hd388f4c_0
+  - pyyaml=3.12=py27h27f1c3f_1
+  - requests=2.18.4=py27h038ddc7_1
+  - ruamel_yaml=0.11.14=py27h6ffe8f8_2
+  - scipy=0.17.0=np110py27_1
+  - seaborn=0.8.1=py27hcb5f44a_0
+  - setuptools=36.5.0=py27h474e7f7_0
+  - singledispatch=3.4.0.3=py27h18657b7_0
+  - sip=4.18.1=py27h42a55a9_2
+  - six=1.11.0=py27hcc62b61_1
+  - ssl_match_hostname=3.5.0.1=py27he14404e_2
+  - statsmodels=0.6.1=np110py27_1
+  - tornado=4.5.3=py27_0
+  - urllib3=1.22=py27h0db6be9_0
+  - vc=9=h7299396_1
+  - vs2008_runtime=9.00.30729.1=hfaea7d5_1
+  - vs2010_runtime=10.00.40219.1=2
+  - wheel=0.30.0=py27hf092909_1
+  - win_inet_pton=1.0.1=py27h4f1e666_1
+  - wincertstore=0.2=py27h87a2792_0
+  - wxpython=3.0=py27_0
+  - xlrd=1.1.0=py27hb694ad8_1
+  - pip:
+    - backports.ssl-match-hostname==3.5.0.1
+    - decorator==4.0.11
+    - imageio==2.1.2
+    - json-tricks==3.11.3
+    - moviepy==0.2.3.2
+    - psychopy==1.85.3
+    - psychopy-ext==0.6.0.4
+    - pyo==0.8.8
+    - pyosf==1.0.5
+    - python-bidi==0.4.0
+    - tables==3.2.2
+    - tqdm==4.11.2
+prefix: C:\Users\LupyanLab\Miniconda2
