Refactor some command line options into host vars

--- a/ansible-playbooks/configure-ubuntu.yml
+++ b/ansible-playbooks/configure-ubuntu.yml
@@ -1,4 +1,6 @@
 ---
+# Configure a fresh install of Ubuntu
+# - Enables the ufw firewall to only allow SSH connections with keys
 - hosts: complab
   become: yes
   vars:
